--- a/index.html
+++ b/index.html
@@ -1,38 +1,132 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Emploi du Temps</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emploi du Temps</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="user-info">
-    <button id="login-btn">Se connecter</button>
-  </div>
-
-  <div class="container">
-    <div class="header">
-      <h1>Emploi du temps SALLE SN2</h1>
-      <button id="settingsBtn">⚙️</button>
+    <div class="user-info">
+        <button id="login-btn">Se connecter</button>
     </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Heure</th>
-          <th>Lundi</th>
-          <th>Mardi</th>
-          <th>Mercredi</th>
-          <th>Jeudi</th>
-          <th>Vendredi</th>
-        </tr>
-      </thead>
-      <tbody id="scheduleBody">
-        <!-- Les lignes seront générées dynamiquement -->
-      </tbody>
-    </table>
-  </div>
 
-  <script src="script.js"></script>
+    <div class="container">
+        <div class="header">
+            <h1>Emploi du temps SALLE SN2</h1>
+            <button id="settingsBtn">⚙️</button>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Heure</th>
+                    <th>Lundi</th>
+                    <th>Mardi</th>
+                    <th>Mercredi</th>
+                    <th>Jeudi</th>
+                    <th>Vendredi</th>
+                </tr>
+            </thead>
+            <tbody id="scheduleBody">
+                <tr>
+                    <td>08:00 - 08:55</td>
+                    <td class="Pause"></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                </tr>
+                <tr>
+                  <td>08:55 - 09:50</td>
+                  <td class="Cours" ></td>
+                  <td class="Cours" ></td>
+                  <td class="Cours" ></td>
+                  <td class="Cours" ></td>
+                  <td class="Cours" ></td>
+              </tr>
+                <tr>
+                    <td>09:50 - 10:10</td>
+                    <td class="Pause"> </td>
+                    <td class="Pause"> </td>
+                    <td class="Pause"> </td>
+                    <td class="Pause"> </td>
+                    <td class="Pause"> </td>
+                </tr>
+                <tr>
+                    <td>10:10 - 11:05</td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                </tr>
+                <tr>
+                    <td>11:05 - 12:00</td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                </tr>
+                <tr>
+                  <td>12:00 - 12h50</td>
+                  <td class="Pause"></td>
+                  <td class="Cours"></td>
+                  <td class="Pause"></td>
+                  <td class="Pause"></td>
+                  <td class="Pause"> </td>
+              </tr>
+              <tr>
+                <td>12:50 - 13:45</td>
+                <td class="Pause"> </td>
+                <td class="Pause"> </td>
+                <td class="Pause"> </td>
+                <td class="Pause"> </td>
+                <td class="Pause"> </td>
+            </tr>
+                <tr>
+                    <td>13:45 - 14:40</td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Pause"> </td>
+                </tr>
+                <tr>
+                    <td>14:40 - 15:35</td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Cours" ></td>
+                    <td class="Pause"> </td>
+                </tr>
+                <tr>
+                  <td>15:35 - 15:55</td>
+                  <td class="Pause"> </td>
+                  <td class="Pause"> </td>
+                  <td class="Cours"></td>
+                  <td class="Pause"> </td>
+                  <td class="Pause"> </td>
+              </tr>
+                <tr>
+                    <td>15:55 - 16:50</td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Cours"></td>
+                    <td class="Pause"></td>
+                </tr>
+                <tr>
+                    <td>16:50 - 17:45</td>
+                    <td class="Cours" ></td>
+                    <td class="Pause"></td>
+                    <td class="Pause"></td>
+                    <td class="Pause"></td>
+                    <td class="Pause"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
